feat: implement authenticate funtion
