# internal/modules/user/dto.go
@@ -2,8 +2,6 @@ package user
 
 import (
 	"time"
-
-	"github.com/google/uuid"
 )
 
 // CreateUserDTO represents the data needed to create a new user
@@ -15,7 +13,7 @@ type CreateUserDTO struct {
 	FirstName   string     `json:"first_name" validate:"required" example:"John"`
 	LastName    string     `json:"last_name" validate:"required" example:"Doe"`
 	DateOfBirth *time.Time `json:"date_of_birth,omitempty" example:"1990-01-01T00:00:00Z"`
-	Gender      *string    `json:"gender,omitempty" validate:"omitempty,oneof=male female other" example:"male"`
+	Gender      *int8      `json:"gender,omitempty" validate:"omitempty,oneof=1 2" example:"1"`
 	AvatarURL   *string    `json:"avatar_url,omitempty" validate:"omitempty,url" example:"https://example.com/avatar.jpg"`
 }
 
@@ -25,8 +23,8 @@ type UpdateUserDTO struct {
 	PhoneNumber *string    `json:"phone_number,omitempty" validate:"omitempty,e164" example:"+12125551234"`
 	FirstName   *string    `json:"first_name,omitempty" example:"John"`
 	LastName    *string    `json:"last_name,omitempty" example:"Doe"`
-	DateOfBirth *time.Time `json:"date_of_birth,omitempty" example:"1990-01-01T00:00:00Z"`
-	Gender      *string    `json:"gender,omitempty" validate:"omitempty,oneof=male female other" example:"male"`
+	DateOfBirth *time.Time `json:"date_of_birth,omitempty" example:"1990-01-01"`
+	Gender      *int8      `json:"gender,omitempty" validate:"omitempty,oneof=1 2" example:"1"`
 	AvatarURL   *string    `json:"avatar_url,omitempty" validate:"omitempty,url" example:"https://example.com/avatar.jpg"`
 }
 
@@ -40,21 +38,21 @@ type ChangePasswordDTO struct {
 // UserResponseDTO represents the user data to be returned in API responses
 // @Description User information returned in API responses
 type UserResponseDTO struct {
-	ID            uuid.UUID  `json:"id" example:"a87ff679-4056-4bee-8c3f-37f9e9a48e1e"`
+	ID            int64      `json:"id" example:"1"`
 	Email         string     `json:"email" example:"user@example.com"`
 	PhoneNumber   *string    `json:"phone_number,omitempty" example:"+12125551234"`
 	FirstName     string     `json:"first_name" example:"John"`
 	LastName      string     `json:"last_name" example:"Doe"`
 	FullName      string     `json:"full_name" example:"John Doe"`
-	DateOfBirth   *time.Time `json:"date_of_birth,omitempty" example:"1990-01-01T00:00:00Z"`
-	Gender        *string    `json:"gender,omitempty" example:"male"`
+	DateOfBirth   *time.Time `json:"date_of_birth,omitempty" example:"1990-01-01"`
+	Gender        *int8      `json:"gender,omitempty" example:"1"`
 	AvatarURL     *string    `json:"avatar_url,omitempty" example:"https://example.com/avatar.jpg"`
 	EmailVerified bool       `json:"email_verified" example:"true"`
-	PhoneVerified bool       `json:"phone_verified" example:"false"`
-	Status        string     `json:"status" example:"active"`
+	Status        int8       `json:"status" example:"1"`
 	LastLoginAt   *time.Time `json:"last_login_at,omitempty" example:"2023-01-01T12:00:00Z"`
 	CreatedAt     time.Time  `json:"created_at" example:"2023-01-01T00:00:00Z"`
 	UpdatedAt     time.Time  `json:"updated_at" example:"2023-01-01T12:34:56Z"`
+	DeletedAt     *time.Time `json:"deleted_at,omitempty" example:"2023-01-10T00:00:00Z"`
 }
 
 // PaginatedUsersResponse represents a paginated list of users
@@ -67,23 +65,30 @@ type PaginatedUsersResponse struct {
 	TotalPages int               `json:"total_pages" example:"5"`
 }
 
-// ToResponseDTO converts a User model to a UserResponseDTO
-func (u User) ToResponseDTO() UserResponseDTO {
-	return UserResponseDTO{
-		ID:            u.ID,
-		Email:         u.Email,
-		PhoneNumber:   u.PhoneNumber,
-		FirstName:     u.FirstName,
-		LastName:      u.LastName,
-		FullName:      u.FullName(),
-		DateOfBirth:   u.DateOfBirth,
-		Gender:        u.Gender,
-		AvatarURL:     u.AvatarURL,
-		EmailVerified: u.EmailVerified,
-		PhoneVerified: u.PhoneVerified,
-		Status:        u.Status,
-		LastLoginAt:   u.LastLoginAt,
-		CreatedAt:     u.CreatedAt,
-		UpdatedAt:     u.UpdatedAt,
+type DataResponseDTO struct {
+	Success bool            `json:"success"`
+	Data    UserResponseDTO `json:"data"`
+}
+
+// ToResponseDTO converts a User model to a DataResponseDTO
+func (u User) ToResponseDTO() DataResponseDTO {
+	return DataResponseDTO{
+		Success: true,
+		Data: UserResponseDTO{
+			ID:            u.ID,
+			Email:         u.Email,
+			PhoneNumber:   u.PhoneNumber,
+			FirstName:     u.FirstName,
+			LastName:      u.LastName,
+			FullName:      u.FullName(),
+			DateOfBirth:   u.DateOfBirth,
+			Gender:        u.Gender,
+			AvatarURL:     u.AvatarURL,
+			EmailVerified: u.EmailVerified,
+			Status:        u.Status,
+			LastLoginAt:   u.LastLoginAt,
+			CreatedAt:     u.CreatedAt,
+			UpdatedAt:     u.UpdatedAt,
+		},
 	}
 }
